EASYOPAC-222 - Fix the z-index for img.

--- a/sass/ding_item_viewer.scss
+++ b/sass/ding_item_viewer.scss
@@ -122,6 +122,7 @@ $base-font-weight-bold:           600;
       overflow: hidden;
       width: 120px;
       max-height: 193px;
+      z-index: inherit;
     }
 
     &.active {
